@@ -276,7 +276,7 @@ public class InterfaceXDeadLetterQueue {
                 result.add(entry);
             }
         }
-        return Collections.unmodifiableList(result);
+        return List.copyOf(result);
     }
 
     /**
@@ -292,7 +292,7 @@ public class InterfaceXDeadLetterQueue {
                 result.add(entry);
             }
         }
-        return Collections.unmodifiableList(result);
+        return List.copyOf(result);
     }
 
     /**
